--- a/index.html
+++ b/index.html
@@ -126,6 +126,27 @@
         </div>
       </div>
     </section>
+
+      <!-- About -->
+      <section class="about section" id="about">
+        <h2 class="section_title">About Me</h2>
+        <span class="section_subtitle">My introduction</span>
+        <div class="about_container container grid">
+          <img src="./assets/img/myphoto.jpg" alt="headshot image" class="about_img" data-tilt />
+          <div class="about_data">
+            <p class="about_description">
+              Hey there,👋 I'm Yogananth a 19-year-old AIML undergrad who is passionate about Software Development, UI/UX
+              Design Management.
+            </p>
+            <div class="about_button">
+              <a download="" href=".Resume.pdf" class="button button--flex" target="_blank">
+                Resume<i class="uil uil-file-download-alt button_icon"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+  
 </body>
 
 </html>
