--- a/index.html
+++ b/index.html
@@ -328,6 +328,82 @@
       </div>
     </section>
 
+    
+    <!-- Qualifications -->
+    <section class="qualification section" id="qualification">
+      <h2 class="section_title">Qualifications</h2>
+      <span class="section_subtitle">My Educational Qualification & Work Experience</span>
+
+      <div class="qualification_container container">
+        <div class="qualification_tabs">
+          <div class="qualification_button button-flex" id="educationheader">
+            <i class="uil uil-graduation-cap qualification_icon"></i>Education
+          </div>
+
+          <div class="qualification_button button-flex" id="workheader">
+            
+          </div>
+        </div>
+
+        <div class="qualification_sections">
+          <!-- Educational Qualification -->
+          <div class="qualification_content qualification_active" data-content id="education">
+            <!-- BTech IT -->
+            <div class="qualification_data">
+              <div>
+                <h3 class="qualification_title">B.Tech Artificial Intelligence in Machine learning</h3>
+                <span class="qualification_subtitle"><a href="http://www.kongu.ac.in" target="_blank"
+                    rel="noopener noreferrer">Kongu Engineering College</a></span>
+                <div class="qualification_calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2023 - 2026
+                </div>
+              </div>
+
+              <div>
+                <span class="qualification_circle"></span>
+                <span class="qualification_line"></span>
+              </div>
+            </div>
+
+            <!-- School 11-12 -->
+            <div class="qualification_data">
+              <div></div>
+
+              <div>
+                <span class="qualification_circle"></span>
+                <span class="qualification_line"></span>
+              </div>
+
+              <div>
+                <h3 class="qualification_title">Diploma in Mechatronics Engineering</h3>
+                <span class="qualification_subtitle"><a href="https://kongupolytechnic.ac.in/" target="_blank"
+                    rel="noopener noreferrer">Kongu Polytechnic College, Perundurai</a></span>
+                <div class="qualification_calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2020 - 2023
+                </div>
+              </div>
+            </div>
+
+            <!-- School 1-10 -->
+            <div class="qualification_data">
+              <div>
+                <h3 class="qualification_title">Secondary School</h3>
+                <span class="qualification_subtitle"><a
+                    rel="noopener noreferrer">M.R.S Matric Hr Sec School, Kolappalur</a></span>
+                <div class="qualification_calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2008 - 2020
+                </div>
+              </div>
+              <div>
+                <span class="qualification_circle"></span>
+              </div>
+            </div>
+
+          </div>
+
 </body>
 
 </html>
