Contact code added

--- a/index.html
+++ b/index.html
@@ -503,6 +503,72 @@
       </div>
     </section>
 
+
+    
+    <!-- Contact Me -->
+    <section class="contact section" id="contact">
+      <h1 class="section_title">Contact Me</h1>
+      <span class="section_subtitle">
+        Want to connect? My inbox is always open!
+      </span>
+
+      <div class="contact_container container grid">
+        <div>
+          <a href="mailto:mjyogananth@gmail.com" target="_blank">
+            <div class="contact_info">
+              <i class="uil uil-envelope-alt contact_icon"></i>
+              <div>
+                <h3 class="contact_title">Email</h3>
+                <span class="contact_subtitle">mjyogananth@gmail.com</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://maps.app.goo.gl/RrecHFQPxzjEcSij8" target="_blank">
+            <div class="contact_info">
+              <i class="uil uil-location-point contact_icon"></i>
+              <div>
+                <h3 class="contact_title">Location</h3>
+                <span class="contact_subtitle">Gobichettipalayam, Erode, Tamil Nadu.</span>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <form action="https://formspree.io/f/xyyozeaq" class="contact_form grid" id="contact-form" method="POST">
+          <div id="alert" class="alert_style"></div>
+          <div class="contact_inputs grid">
+            <div class="contact_content">
+              <label class="contact_label">Name</label>
+              <input type="text" name="name" class="contact_input" id="name" required>
+            </div>
+            <div class="contact_content">
+              <label for="email" class="contact_label">Email</label>
+              <input type="email" name="email" class="contact_input" id="email" required>
+            </div>
+          </div>
+          <div class="contact_content">
+            <label for="subject" class="contact_label">Subject</label>
+            <input type="text" name="subject" class="contact_input" id="subject" required>
+          </div>
+          <div class="contact_content">
+            <label for="message" class="contact_label">Message</label>
+            <textarea name="message" id="" cols="0" rows="7" class="contact_input message" id="message"
+              style="resize: vertical;" required></textarea>
+          </div>
+
+          <div>
+            <button type="submit" class="button button-flex">
+              Send Message
+              <i class="uil uil-message button_icon"></i>
+            </button>
+          </div>
+        </form>
+
+      </div>
+    </section>
+  </main>
+
 </body>
 
 </html>
