Footer code added

--- a/index.html
+++ b/index.html
@@ -569,6 +569,51 @@
     </section>
   </main>
 
+  
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer_bg">
+      <div class="footer_container container grid">
+        <div>
+          <h1 class="footer_title">Yogananth</h1>
+          <span class="footer_subtitle">Web Developer</span>
+        </div>
+
+        <ul class="footer_links">
+          <li>
+            <a href="#about" class="footer_link">About</a>
+          </li>
+          <li>
+            <a href="#projects" class="footer_link">Projects</a>
+          </li>
+          <li>
+            <a href="#contact" class="footer_link">Contact Me</a>
+          </li>
+        </ul>
+
+        <div class="footer_socials">
+          <a href="https://github.com/YogananthJ" target="_blank" class="footer_social">
+            <i class="uil uil-github-alt"></i>
+          </a>  
+          <a href="https://www.linkedin.com/yogananth-j-653400307" target="_blank" class="footer_social">
+            <i class="uil uil-linkedin-alt"></i>
+          </a>
+          <a href="https://www.instagram.com/yogananth_045" target="_blank" class="footer_social">
+            <i class="uil uil-instagram"></i>
+          </a>
+        </div>
+      </div>
+
+      <p class="footer_copy">&#169; Yogananth J. All rights reserved</p>
+    </div>
+  </footer>
+
+  <!-- Scroll Top -->
+  <a href="#" class="scrollup" id="scroll-up">
+    <i class="uil uil-arrow-up scrollup_icon"></i>
+  </a>
+
+
 </body>
 
 </html>
