--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   content="Yogananth is currently a third year undergrad from India" />
 <meta property="profile:username" content="yogananth" />
 <title>Yogananth</title>
+<link rel="stylesheet" href="./assets/css/style.css" />
+
 </head>
 
 <body>
