--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <meta property="profile:username" content="yogananth" />
 <title>Yogananth</title>
 <link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+
 
 </head>
 
