theme code added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta property="profile:username" content="yogananth" />
 <title>Yogananth</title>
 <link rel="stylesheet" href="./assets/css/style.css" />
+
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 
 
@@ -617,7 +618,8 @@
     <i class="uil uil-arrow-up scrollup_icon"></i>
   </a>
 
-
+<script src="./assets/js/main.js"></script>
+ 
 </body>
 
 </html>
